<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:title="@string/social">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:title="@string/my_friends"
                    android:id="@+id/item_friends"/>
            </group>
        </menu>

    </item>

    <item
        android:title="@string/trips">
        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:title="@string/my_trip"
                    android:id="@+id/item_my_trip"/>
                <item
                    android:title="@string/my_wishing_list"
                    android:id="@+id/item_my_wishing_trip"/>

            </group>
        </menu>

    </item>




</menu>