<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_fragment.NewPost">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/new_post"
        android:background="@color/green_1"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/toolbar_new_post"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:onClick="save"
        android:backgroundTint="@color/grey_2"
        app:layout_constraintEnd_toEndOf="@+id/toolbar_new_post"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginTop="4dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/toolbar_new_post"
        app:layout_constraintBottom_toBottomOf="parent">

        <EditText
            android:layout_width="match_parent"
            android:id="@+id/new_post_edit_text"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:hint="@string/hint_for_new_post"/>

        <ImageView
            android:layout_width="180dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/new_post_image_view"
            android:src="@drawable/ic_baseline_add_24"
            android:onClick="addPhoto"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tag_a_spot"
                android:textColor="@color/black"
                android:textSize="30sp"/>


        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>