<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayoutFAB"
    android:layout_margin="16dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/new_post_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/fab_text_view_day_theme"
                android:text="@string/new_post" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_post"
                app:fabSize="mini"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/fabs_day_theme"
                android:layout_margin="8dp"
                android:src="@drawable/ic_baseline_post_add_24"
                android:contentDescription="@string/new_post" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/new_chat_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/fab_text_view_day_theme"
                android:text="@string/new_chat" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_chat"
                app:fabSize="mini"
                style="@style/fabs_day_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_margin="8dp"
                android:contentDescription="@string/new_chat"
                android:src="@drawable/ic_baseline_chat_24"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/new_spot_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/fab_text_view_day_theme"
                android:text="@string/new_spot" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_spot"
                app:fabSize="mini"
                android:layout_margin="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/fabs_day_theme"
                android:src="@drawable/ic_baseline_tour_24"
                android:contentDescription="@string/new_spot" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="31dp">


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                app:fabSize="normal"
                android:layout_margin="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/fabs_day_theme"
                android:src="@drawable/ic_baseline_add_24"/>


        </LinearLayout>

</LinearLayout>